<resources>
    <string name="app_name">Sofie</string>
    <string name="title_activity_tarefas">Sofie</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cod_response">\"Código: \"</string>
    <string name="nome_tarefa">nome da tarefa</string>
    <string name="email">email</string>
    <string name="descri_o_da_tarefa">Descrição da Tarefa</string>
    <string name="emailcad">email</string>
    <string name="nome_da_tarefa">nome da tarefa</string>
    <string name="excluir">Excluir</string>
    <string name="gravar">Gravar</string>
    <string name="doispontos">:</string>
    <string name="descricao">descricao</string>
    <string name="textview">TextView</string>
</resources>