<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.NovaTarefaActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/emailcad"
        android:inputType="textEmailSubject"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/descri_o_da_tarefa"
        app:layout_constraintBottom_toTopOf="@+id/editTextDesc"
        app:layout_constraintStart_toStartOf="@+id/editTextDesc"
        app:layout_constraintTop_toBottomOf="@+id/editTextTarefa" />

    <EditText
        android:id="@+id/editTextTarefa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/nome_da_tarefa"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="273dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>